# s3tui

./: .envrc  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  release-plz.toml  tests_scenarios.md
.data/creds/: default
.github/workflows/: publish.yml  release-plz.yml
benches/: transfers.rs
src/: action.rs  app_router.rs  cli.rs  file_manager_page.rs  help_page.rs  lib.rs  main.rs  state_store.rs  termination.rs  ui_manager.rs  utils.rs
src/components/: app_router.rs  component.rs  file_manager_page.rs  help_page.rs  mod.rs  s3_creds_page.rs  transfers_page.rs
src/components/widgets/: mod.rs  quit_confirmation.rs
src/fetchers/: local_data_fetcher.rs  mod.rs  s3_data_fetcher.rs
src/model/: action.rs  download_progress_item.rs  error.rs  filtering.rs  has_children.rs  local_data_item.rs  local_selected_item.rs  mod.rs  navigation_state.rs  progress_item.rs  s3_data_item.rs  s3_selected_item.rs  sorting.rs  state.rs  transfer_item.rs  transfer_state.rs  upload_progress_item.rs
src/services/: local_data_fetcher.rs  mod.rs  s3_data_fetcher.rs  task_registry.rs  transfer_manager.rs  transfer_persistence.rs  transfer_state.rs
src/settings/: file_credentials.rs  mod.rs
tests/: property_tests.rs  s3_compat_tests.rs
