[package]
name = "s3tui"
version = "0.1.0"
authors = ["Krzysztof Grajek <krzysztof.grajek@softwaremill.com>"]
edition = "2021"
description = "Simple TUI application for multiple s3 accounts operations"
license = "MIT"
repository = "https://github.com/softberries/s3tui"
readme = "README.md"
keywords = ["s3", "aws", "ratatui", "tui", "softwaremill"]
categories = ["command-line-utilities", "asynchronous"]

[dependencies]
ratatui = { version = "0.26.1", features = ["all-widgets"] }
throbber-widgets-tui = "0.5.0"
crossterm = { version = "0.27.0", features = ["event-stream"] }
tokio = { version = "1.37.0", features = ["full"] }
tokio-stream = { version = "0.1.15" }
anyhow = "1.0.82"
color-eyre = "0.6.2"
aws-config = { version= "1.1.9", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.21.0"
humansize = "1.1.0"
dirs = "5.0.1"
config = "0.14.0"
futures = "0.3.30"
rand = "0.8.5"
directories = "5.0.1"
aws-smithy-types = "1.1.8"
log = "0.4.21"
pin-project = "1.1.5"
tracing = "0.1.40"
http = "0.2.12"
http-body = "0.4.6"
bytes = "1.6.0"
aws-smithy-runtime-api = "1.5.0"
url = "2.2.2"
percent-encoding = "2.3.1"

[dev-dependencies]
tempfile = "3.2.0"
mockall = "0.12.1"