[package]
name = "s3tui"
version = "0.5.0"
authors = ["Krzysztof Grajek <krzysztof.grajek@softwaremill.com>"]
edition = "2021"
description = "Simple TUI application for multiple s3 account operations"
license = "MIT"
repository = "https://github.com/softberries/s3tui"
homepage = "https://github.com/softberries/s3tui"
readme = "README.md"
keywords = ["s3", "aws", "ratatui", "tui", "softwaremill"]
categories = ["command-line-utilities", "asynchronous"]
documentation = "https://docs.rs/s3tui"

[dependencies]
better-panic = "0.3.0"
human-panic = "1.2.3"
signal-hook = "0.3.17"
strip-ansi-escapes = "0.2.0"
libc = "0.2.148"
ratatui = { version = "0.29.0", features = ["serde", "macros"] }
throbber-widgets-tui = "0.8.0"
crossterm = { version = "0.28.1", features = ["event-stream"] }
clap = { version = "4.4.5", features = ["derive", "cargo", "wrap_help", "unicode", "string", "unstable-styles"] }
tokio = { version = "1.43.0", features = ["full"] }
tokio-stream = { version = "0.1.17" }
lazy_static = "1.4.0"
color-eyre = "0.6.2"
aws-config = { version = "1.5.0", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.65.0"
humansize = "1.1.0"
dirs = "5.0.1"
config = "0.14.0"
futures = "0.3.30"
rand = "0.8.5"
directories = "5.0.1"
aws-smithy-types = "1.2.0"
log = "0.4.21"
pin-project = "1.1.5"
http = "0.2.12"
http-body = "0.4.6"
bytes = "1.6.0"
aws-smithy-runtime-api = "1.7.0"
url = "2.2.2"
percent-encoding = "2.3.1"
tracing = "0.1.40"
tracing-futures = "0.2.5"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "serde"] }
tui-input = "0.11.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
vergen = { version = "8.2.6", features = ["build", "git", "gitoxide", "cargo"] }

[dev-dependencies]
tempfile = "3.2.0"
mockall = "0.12.1"
testcontainers = "0.23"
testcontainers-modules = { version = "0.11", features = ["minio"] }
proptest = "1.4"
criterion = { version = "0.5", features = ["async_tokio"] }

[[bench]]
name = "transfers"
harness = false
